tests/sksl/errors/golden/ArrayIndexOutOfRange.glsl
### Compilation failed:

error: 3: index -1 out of range for 'int[123]'
error: 6: index 123 out of range for 'half4x4[123]'
error: 7: index 1000000000 out of range for 'int4[123]'
error: 8: index -1294967296 out of range for 'half3[123]'
error: 10: index -1 out of range for 'Block[]'
error: 13: index -1294967296 out of range for 'Block[]'
error: 15: index -1 out of range for 'half4'
error: 20: index 4 out of range for 'half4'
error: 21: index 1000000000 out of range for 'half4'
error: 23: index -1 out of range for 'half3'
error: 27: index 3 out of range for 'half3'
error: 28: index 4 out of range for 'half3'
error: 29: index 1000000000 out of range for 'half3'
error: 31: index -1 out of range for 'half2'
error: 34: index 2 out of range for 'half2'
error: 35: index 3 out of range for 'half2'
error: 36: index 4 out of range for 'half2'
error: 37: index 1000000000 out of range for 'half2'
error: 39: index -1 out of range for 'half2x4'
error: 42: index 2 out of range for 'half2x4'
error: 43: index 3 out of range for 'half2x4'
error: 44: index 4 out of range for 'half2x4'
error: 45: index 1000000000 out of range for 'half2x4'
error: 47: index -1 out of range for 'half3x3'
error: 51: index 3 out of range for 'half3x3'
error: 52: index 4 out of range for 'half3x3'
error: 53: index 1000000000 out of range for 'half3x3'
error: 55: index -1 out of range for 'half4x2'
error: 60: index 4 out of range for 'half4x2'
error: 61: index 1000000000 out of range for 'half4x2'
30 errors
